add source link

--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@ to receive occasional announcements.
 
 <p style="margin-top: 8px;">
 Based on <a href="http://www.onlinepythontutor.com">Online Python Tutor</a>, &copy; 2010-2013 <a href="http://www.pgbovine.net/">Philip Guo</a> all rights reserved. Java version by <a href="http://dave-pritchard.net">David Pritchard</a>.
+Source code: for this version's <a href="https://github.com/daveagp/java_jail/tree/master/cp/traceprinter">backend</a>;
+the <a href="https://github.com/daveagp/java_visualize">frontend and installation instructions</a>.
 </p>
 
 </div>
