hiding unused cgi options

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ Execute code using
     <option value="2">Python 2.7</option>
     <option value="3">Python 3.3</option>
   </select>,
+-->
+<!-- these two make sense, but are not implemented yet
   <select id="cumulativeModeSelector">
     <option value="false">hide frames of exited functions</option>
     <option value="true">show frames of exited functions</option>
@@ -99,6 +101,8 @@ Execute code using
     <option value="false">inline primitives and nested objects</option>
     <option value="true">render all objects on the heap</option>
   </select>,
+-->
+<!--
   <select id="drawParentPointerSelector">
     <option value="false">hide environment parent pointers</option>
     <option value="true">show environment parent pointers</option>
