added icon, change to page title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 <div id="pyInputPane">
 
-<p style="text-align:center;"><i>This is beta software.</i> Write your Java code here:</p>
+<table style="margin:0px auto 0px auto;"><tr><td><img title="Based on icons by Jacob Halton and Francesco Terzini of the Noun Project" src="img/jv64.png"></td><td style="text-align: center"><span style="font-size:150%">Java Visualizer</span><br><i>This is beta software.</i><br>Write your Java code here:</td><table>
 
 <div id="codeInputPane">
 </div> <!-- populate with a CodeMirror instance -->
