whoops let's put table where it doesn't break everything

--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 <body>
 
+<table style="margin:0px auto 0px auto;"><tr><td><img title="Based on icons by Jacob Halton and Francesco Terzini of the Noun Project" src="img/jv64.png"></td><td style="text-align: center"><span style="font-size:150%">Java Visualizer</span><br><i>(beta)</i></td><table>
+
 <div id="pyInputPane">
 
-<table style="margin:0px auto 0px auto;"><tr><td><img title="Based on icons by Jacob Halton and Francesco Terzini of the Noun Project" src="img/jv64.png"></td><td style="text-align: center"><span style="font-size:150%">Java Visualizer</span><br><i>This is beta software.</i><br>Write your Java code here:</td><table>
+<p style="text-align:center;">Write your Java code here:</p>
 
 <div id="codeInputPane">
 </div> <!-- populate with a CodeMirror instance -->
