--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->
 
 <head>
-  <title>Java visualizer (based on Online Python Tutor)</title>
+  <title>Java Visualizer</title>
 
 <!-- requirements for pytutor.js -->
 <script type="text/javascript" src="./OnlinePythonTutor/v3/js/d3.v2.min.js"></script>
@@ -78,7 +78,9 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 <body>
 
-<table style="margin:0px auto 0px auto;"><tr><td><img title="Based on icons by Jacob Halton and Francesco Terzini of the Noun Project" src="img/jv64.png"></td><td style="text-align: center"><span style="font-size:150%">Java Visualizer</span><br><i>(beta)</i></td><table>
+<table style="margin:0px auto 0px auto;"><tr><td><img title="Based on icons by Jacob Halton and Francesco Terzini of the Noun Project" src="img/jv64.png"></td><td style="text-align: center"><span style="font-size:150%">Java Visualizer</span><br><i>(beta:</i> 
+ <a href="mailto:dp6@cs.princeton.edu">report a bug</a>)
+</td><table>
 
 <div id="pyInputPane">
 
