add array elision

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <script type="text/javascript" src="./OnlinePythonTutor/v3/js/jquery.qtip.min.js"></script>
 <link type="text/css" href="./OnlinePythonTutor/v3/css/jquery.qtip.css" rel="stylesheet" />
 
-<script type="text/javascript" src="./OnlinePythonTutor/v3/js/pytutor.js?3"></script>
+<script type="text/javascript" src="./OnlinePythonTutor/v3/js/pytutor.js?4"></script>
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/pytutor.css"/>
 
 
@@ -94,7 +94,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <span id='options' style='display:none'>
 <input id='showStringsAsObjects' type='checkbox'>
 <label for='showStringsAsObjects'>
-Show String objects, not just values
+Show String/Integer/etc objects, not just values
 </label>
 <input id='showAllFields' type='checkbox'>
 <label for='showAllFields'>
