single configuration file!

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <script type="text/javascript" src="./CodeMirror3/mode/clike/clike.js"></script>
 <script type="text/javascript" src="./CodeMirror3/addon/edit/matchbrackets.js"></script>
 
+<script type="text/javascript" src="./config.js.php"></script> <!-- used to be opt-frontend.js -->
 <script type="text/javascript" src="./jv-frontend.js?6"></script> <!-- used to be opt-frontend.js -->
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/opt-frontend.css"/>
 
