--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <link type="text/css" href="./OnlinePythonTutor/v3/css/jquery.qtip.css" rel="stylesheet" />
 
 <script type="text/javascript" src="./OnlinePythonTutor/v3/js/pytutor.js?4"></script>
+<script type="text/javascript" src="./OnlinePythonTutor/v3/js/hooks.js?4"></script>
 <script type="text/javascript" src="pytutor-customizations.js?1"></script>
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/pytutor.css"/>
 <link rel="stylesheet" href="pytutor-customizations.css"/>
