--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Show String/Integer/etc objects, not just values
 </label>
 <input id='showAllFields' type='checkbox'>
 <label for='showAllFields'>
-Show overridden fields
+Show overridden fields, synthetics
 </label>
 </input>
 </span>
