back on mainstream OnlinePythonTutor

--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <script type="text/javascript" src="./OnlinePythonTutor/v3/js/jquery.qtip.min.js"></script>
 <link type="text/css" href="./OnlinePythonTutor/v3/css/jquery.qtip.css" rel="stylesheet" />
 
-<!--<script type="text/javascript" src="./OnlinePythonTutor/v3/js/pytutor.js?4"></script>
-<script type="text/javascript" src="./OnlinePythonTutor/v3/js/hooks.js?4"></script> waiting for upstream changes! -->
-<script type="text/javascript" src="opt-temp/pytutor.js"></script>
-<script type="text/javascript" src="opt-temp/hooks.js"></script>
+<script type="text/javascript" src="./OnlinePythonTutor/v3/js/pytutor.js"></script>
+<script type="text/javascript" src="./OnlinePythonTutor/v3/js/hooks.js"></script>
 <script type="text/javascript" src="pytutor-customizations.js?1"></script>
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/pytutor.css"/>
 <link rel="stylesheet" href="pytutor-customizations.css"/>
