prepare for pytutor refactoring

--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@ and <a href="http://introcs.cs.princeton.edu/java/44st/ST.java.html"><tt>ST</tt>
 <div id='faq' style='display:none'>
 <ul>
 <li><i>How can I access Java's built-in <tt>Stack</tt>/<tt>Queue</tt> instead of the introcs one?</i> At the top of your program, write <tt>import java.util.Stack;</tt> &mdash; note, <tt>import java.util.*;</tt> won't work.
+<li><i>How do I get shorter URLs?</i> For example code, you can use <a target="_blank" href="#sampleFile=ExecLimit"><tt>#sampleFile=ExecLimit</tt></a> but 
+in general, this is a feature that still <a href="TODO">needs to be implemented</a>. You could use <a href="http://goo.gl">goo.gl</a> for now.
 </li>
 </ul>
 </div>
