fix up examples

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ topics = [
 ["basic",["(Default)","Variables","CmdLineArgs","StdIn","ControlFlow","Sqrt","ExecLimit","Strings"]],
 ["method",["PassByValue","Recursion","StackOverflow"]],
 ["oop",["Rolex","Person","Complex","Casting"]],
-["java feature",["ToString","Reflect","Exception","ExceptionFlow","TwoClasses"]],
-["data structure",["LinkedList","StackQueue","Postfix","SymbolTable"]]
+["data structure",["LinkedList","StackQueue","Postfix","SymbolTable"]],
+["java feature",["ToString","Reflect","Exception","ExceptionFlow","TwoClasses"]]
 ];
 </script>
 
