changing CodeMirror and OPT to submodules

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ see README for more details.
 Summary of changes made:
 - different file locations
 - uses Java, not Python
-- uses CodeMirror3, not 2
+- uses CodeMirror latest version
 - lazier approach for loading examples
 
 ==== Header from visualize.html ====
@@ -68,10 +68,10 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <!-- requirements for opt-frontend.js -->
 
 <!-- codemirror.net online code editor -->
-<script type="text/javascript" src="./CodeMirror3/lib/codemirror.js"></script>
-<link type="text/css" href="./CodeMirror3/lib/codemirror.css" rel="stylesheet" />
-<script type="text/javascript" src="./CodeMirror3/mode/clike/clike.js"></script>
-<script type="text/javascript" src="./CodeMirror3/addon/edit/matchbrackets.js"></script>
+<script type="text/javascript" src="./CodeMirror/lib/codemirror.js"></script>
+<link type="text/css" href="./CodeMirror/lib/codemirror.css" rel="stylesheet" />
+<script type="text/javascript" src="./CodeMirror/mode/clike/clike.js"></script>
+<script type="text/javascript" src="./CodeMirror/addon/edit/matchbrackets.js"></script>
 
 <script type="text/javascript" src="./config.js.php"></script> <!-- used to be opt-frontend.js -->
 <script type="text/javascript" src="./jv-frontend.js?7"></script> <!-- used to be opt-frontend.js -->
