--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <script type="text/javascript" src="./jv-frontend.js?7"></script> <!-- used to be opt-frontend.js -->
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/opt-frontend.css"/>
 
+<script type="text/javascript">
+window.jv_cpp = false; // c++ fake visualizer extensions
+</script>
+
 </head>
 
 <body>
@@ -337,6 +341,8 @@ in general, this is a feature that still <a href="TODO">needs to be implemented<
 </div>
 
 <div id="footer">
+
+<div id="data-div" style="display: none;">Data for WordPress: <textarea id="data" style="word-wrap:break-word;"></textarea></div>
 
 <p>
   <button id="genUrlBtn" class="smallBtn" type="button">Generate URL</button> <input type="text" id="urlOutput" size="70"/>
