'release' of 'C++ visualizer'

--- a/index.html
+++ b/index.html
@@ -77,10 +77,6 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <script type="text/javascript" src="./jv-frontend.js?7"></script> <!-- used to be opt-frontend.js -->
 <link rel="stylesheet" href="./OnlinePythonTutor/v3/css/opt-frontend.css"/>
 
-<script type="text/javascript">
-window.jv_cpp = false; // c++ fake visualizer extensions
-</script>
-
 </head>
 
 <body>
@@ -342,7 +338,7 @@ in general, this is a feature that still <a href="TODO">needs to be implemented<
 
 <div id="footer">
 
-<div id="data-div" style="display: none;">Data for WordPress: <textarea id="data" style="word-wrap:break-word;"></textarea></div>
+<div id="data-div" style="display: none;">Embed this:<input type="text" id="data" size="70"/></div>
 
 <p>
   <button id="genUrlBtn" class="smallBtn" type="button">Generate URL</button> <input type="text" id="urlOutput" size="70"/>
