--- a/index.html
+++ b/index.html
@@ -338,8 +338,6 @@ in general, this is a feature that still <a href="TODO">needs to be implemented<
 
 <div id="footer">
 
-<div id="data-div" style="display: none;">Embed this:<input type="text" id="data" size="70"/></div>
-
 <p>
   <button id="genUrlBtn" class="smallBtn" type="button">Generate URL</button> <input type="text" id="urlOutput" size="70"/>
 </p>
@@ -347,6 +345,8 @@ in general, this is a feature that still <a href="TODO">needs to be implemented<
 <p>To share this visualization, click the 'Generate URL' button above
 and share that URL. To report a bug, paste the URL along with a brief
 error description in an email addressed to daveagp@gmail.com</p>
+
+<div id="iframeURL-div" style="display: none;">Embeddable iframe:<input type="text" id="iframeURL" size="70" style="font-family:monospace"/></div>
 
 <!--
 <div id="embedLinkDiv">
