linked lists can be vertical

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   <label for='disableNesting'>
   Avoid nesting instances within instances
  </span>
+ <span style="white-space: nowrap;"> 
+  <input id='verticalLists' type='checkbox'>
+  <label for='verticalLists'>
+  Display linked lists vertically
+ </span>
 </span> <!-- #options -->
 </td>
 </tr></table>
