--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  <span style="white-space: nowrap;"> 
   <input id='disableNesting' type='checkbox'>
   <label for='disableNesting'>
-  Avoid nesting instances within instances
+  Prefer non-nesting and vertical layouts
  </span>
  <span style="white-space: nowrap;"> 
   <input id='verticalLists' type='checkbox'>
   <label for='verticalLists'>
-  Display linked lists vertically
+  Force linked lists to display vertically
  </span>
 </span> <!-- #options -->
 </td>
