Move output above program state in embedded mode
Prevents jumping around. Thanks to Nik Baltatzis for the suggestion.

--- a/iframe-embed.html
+++ b/iframe-embed.html
@@ -38,7 +38,7 @@ var python3_backend_script = '/java_visualize/java_safe_ram_maketrace.php';
 
 <body>
 
-  <div id="vizDiv"></div>
+  <div id="vizDiv" class="embedded"></div>
 
 </body>
 </html>
